Ajuste nova implementação do componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 <div style="text-align:center">
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
     
-      <data-table [dataTableProperties]="dataTest">
-          <data-column [columnIcon]="'fa fa-code'" [columnHeader]="'ID'" [columnField]="'id'" (addColumn)="addColumnByEvent($event)"></data-column>
-          <data-column [columnHeader]="'Registro'" [columnField]="'registro'" (addColumn)="addColumnByEvent($event)"></data-column>
-          <data-column [columnHeader]="'Data'" [columnField]="'data'" (addColumn)="addColumnByEvent($event)"></data-column>
-          <data-column [columnHeader]="'Vara'" [columnField]="'vara'" (addColumn)="addColumnByEvent($event)"></data-column>
-          <data-column [columnHeader]="'Status'" [columnField]="'status'" (addColumn)="addColumnByEvent($event)"></data-column>
+      <data-table [data]="dataTest">
+          <data-column [columnIcon]="'fa fa-code'" [columnHeader]="'ID'" [columnField]="'id'"></data-column>
+          <data-column [columnHeader]="'Registro'" [columnField]="'registro'"></data-column>
+          <data-column [columnHeader]="'Data'" [columnField]="'data'" ></data-column>
+          <data-column [columnHeader]="'Vara'" [columnField]="'vara'"></data-column>
+          <data-column [columnHeader]="'Status'" [columnField]="'status'"></data-column>
       </data-table>
   
   </div>
