Ajuste para a versão .28 - icones dinâmicos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
     
       <data-table [data]="dataTest">
-          <data-column [columnIcon]="'fa fa-code'" [columnHeader]="'ID'" [columnField]="'id'"></data-column>
+          <data-column [columnIcon]="'fa fa-code'" [columnHeader]="'ID'" [iconField]="'icon'"  [columnField]="'id'"></data-column>
           <data-column [columnHeader]="'Registro'" [columnField]="'registro'"></data-column>
           <data-column [columnHeader]="'Data'" [columnField]="'data'" ></data-column>
           <data-column [columnHeader]="'Vara'" [columnField]="'vara'"></data-column>
